--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 }
 
 header {
-  height: 80px;
+  height: 120px;
   padding: 20px 2.0rem 20px
 }
 
 #main {
-  padding-bottom: 190px;
+  padding-bottom: 130px;
 }
 
 #user-name-form {
@@ -21,13 +21,10 @@ header {
 }
 
 #room-select {
-  width: 150px;
-  margin-right: 10px;
+  margin-top: 10px;
 }
 
 #room-input {
-  width: 150px;
-  margin-right: 10px;
 }
 
 #name-input {
@@ -42,14 +39,14 @@ header {
 
 #messages {
   padding: 10px 2.0rem;
-  height: calc(100vh - 240px);
+  height: calc(100vh - 290px);
   overflow-y: scroll;
 }
 
 #form {
   margin-top: 10px;
   margin-bottom: 10px;
-  height: 140px;
+  height: 110px;
   padding: 0px 2.0rem;
   width: 100%;
   position: absolute;
